00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: himedia-3tier
  labels:
    name: himedia-3tier
