05-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: himedia-3tier
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: flask
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: himedia-3tier
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
      tier: backend
  template:
    metadata:
      labels:
        app: flask
        tier: backend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector: { matchExpressions: [{ key: app, operator: In, values: [flask] }] }
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: flask
        image: python:3.9-slim
        command: ["/bin/bash", "-c"]
        # 에러 해결을 위해 cryptography 패키지가 추가된 부분입니다.
        args: ["pip install flask pymysql cryptography && python /app/app.py"]
        lifecycle:
          preStop:
            exec: { command: ["sleep", "5"] }
        ports:
        - containerPort: 5000
        resources:
          requests: { cpu: 200m, memory: 128Mi }
          limits: { cpu: 500m, memory: 256Mi }
        livenessProbe:
          httpGet: { path: /health, port: 5000 }
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet: { path: /health, port: 5000 }
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: code-volume
          mountPath: /app
      volumes:
      - name: code-volume
        configMap:
          name: flask-config
